--- a/Figgle/Figgle.csproj
+++ b/Figgle/Figgle.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard1.3</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <VersionPrefix>0.3.0</VersionPrefix>
     <Authors>Drew Noakes, Roberto Ceccarelli</Authors>
     <Company>Drew Noakes, Casasoft</Company>
